# dt-interfaces-cps

./: CMakeLists.txt  package.xml
dt_health_interfaces_cps/: CMakeLists.txt  package.xml
dt_health_interfaces_cps/msg/: BatteryHealth.msg  HardwareStats.msg
dt_interfaces_cps/: CMakeLists.txt  README.md  package.xml
dt_interfaces_cps/msg/: AprilTagsWithInfos.msg  DiagnosticsCodeProfilingArray.msg  LightSensor.msg  LineFollowerStamped.msg  ObstacleImageDetection.msg  ObstacleImageDetectionList.msg  ParamTuner.msg  SceneSegments.msg  Segment.msg  ThetaDotSample.msg  Vsample.msg  WheelsCmdDBV2Stamped.msg
dt_interfaces_cps/srv/: NodeGetParamsList.srv  ToFstatus.srv
dt_ood_interfaces_cps/: CMakeLists.txt  package.xml
dt_ood_interfaces_cps/msg/: BoundedLine.msg  DetectorInput.msg  OODAlert.msg
msg/: DiagnosticsRosLinkArray.msg  DiagnosticsRosNode.msg  DiagnosticsRosParameterArray.msg  DiagnosticsRosProfiling.msg  DiagnosticsRosTopicArray.msg  DuckiebotLED.msg  EncoderStamped.msg  EpisodeStart.msg  LEDPattern.msg  LanePose.msg  ObstacleProjectedDetection.msg  ObstacleProjectedDetectionList.msg  StreetNames.msg
srv/: BatteryInfo.srv  SetCustomLEDPattern.srv
